--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
         run: npm ci
 
       - name: Build with Next.js
-        run: npm run build
+        run: NEXT_PUBLIC_CUSTOM_DOMAIN=true npm run build
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
