--- a/.env.local.example
+++ b/.env.local.example
@@ -5,3 +5,10 @@
 NEXT_PUBLIC_EMAILJS_SERVICE_ID=service_your_service_id
 NEXT_PUBLIC_EMAILJS_TEMPLATE_ID=template_your_template_id
 NEXT_PUBLIC_EMAILJS_PUBLIC_KEY=your_public_key_here
+
+# Google Analytics Configuration
+# Get your measurement ID from Google Analytics 4
+NEXT_PUBLIC_GA_MEASUREMENT_ID=G-XXXXXXXXXX
+
+# Site URL for SEO
+NEXT_PUBLIC_SITE_URL=https://prats2311.tech
